core changes, add log setting and fix full inventory drops
Took 18 minutes